# hodgkin-huxley-sim

./: Cargo.toml  LICENSE_MIT  README.md  applet.css  applet.js  index.html
.github/workflows/: deploy.yml
pkg/: hodgkin_huxley_sim.d.ts  hodgkin_huxley_sim.js  hodgkin_huxley_sim_bg.wasm  hodgkin_huxley_sim_bg.wasm.d.ts  package.json
src/: applet.rs  lib.rs
src/solver/: dopri.rs  euler.rs  hh.rs  mod.rs  rk4.rs
