[package]
name = "hodgkin-huxley-sim"
version = "0.1.0"
authors = ["shadymeowy <tolgademirdal@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
plotly = "0.9.0"
getrandom = { version = "0.2", features = ["js"] }
ndarray = "0.16.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlScriptElement',
  'NodeList',
  'console',
  'HtmlTextAreaElement',
  'HtmlInputElement',
  'HtmlButtonElement'
]